objects/Account_Plan__c.object
<CustomObject>
    <description>The Account Plan custom object is set as a Master Detail to the Account Object as a Related List.</description>
    <fields>
        <fullName>Account_Plan_Details__c</fullName>
        <inlineHelpText>Enter in details for the account plan here.</inlineHelpText>
        <label>Account Plan Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <inlineHelpText>The amount of revenue expected from this account.</inlineHelpText>
        <label>Expected Revenue</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Competitors__c</fullName>
        <label>Key Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Efforts_Planned__c</fullName>
        <label>Marketing Efforts Planned</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>